(Client/BucketsList) Fix overflow

--- a/client/components/buckets/bucket-list/bucket-list.component.scss
+++ b/client/components/buckets/bucket-list/bucket-list.component.scss
@@ -1,3 +1,6 @@
+:host {
+    overflow: auto;
+}
 mat-nav-list {
     padding: 0;
     h4 {
